--- a/opensearch-curator/charts/opensearch-curator/Chart.yaml
+++ b/opensearch-curator/charts/opensearch-curator/Chart.yaml
@@ -1,13 +1,9 @@
 apiVersion: v1
-appVersion: 0.0.5
 description: A Helm chart for Opensearch Curator
 keywords:
 - curator
 - opensearch
 - opensearch-curator
-maintainers:
-- email: mestdagh.tom@gmail.com
-  name: tmestdagh
-- email: gianrubio@gmail.com
-  name: gianrubio
 name: opencsearch-curator
+version: 0.0.5
+appVersion: 0.0.5
