--- a/opensearch-curator/charts/opensearch-curator/templates/cronjob.yaml
+++ b/opensearch-curator/charts/opensearch-curator/templates/cronjob.yaml
@@ -59,7 +59,7 @@ spec:
               imagePullPolicy: {{ .Values.image.pullPolicy }}
               volumeMounts:
                 - name: config-volume
-                  mountPath: /etc/es-curator
+                  mountPath: /etc/opensearch-curator
 {{- if .Values.extraVolumeMounts }}
 {{ toYaml .Values.extraVolumeMounts | indent 16 }}
 {{ end }}
@@ -68,9 +68,9 @@ spec:
 {{ toYaml .Values.command | indent 16 }}
 {{- end }}
 {{- if .Values.dryrun }}
-              args: [ "--dry-run", "--config", "/etc/es-curator/config.yml", "/etc/es-curator/action_file.yml" ]
+              args: [ "--dry-run", "--config", "/etc/opensearch-curator/config.yml", "/etc/opensearch-curator/action_file.yml" ]
 {{- else }}
-              args: [ "--config", "/etc/es-curator/config.yml", "/etc/es-curator/action_file.yml" ]
+              args: [ "--config", "/etc/opensearch-curator/config.yml", "/etc/opensearch-curator/action_file.yml" ]
 {{- end }}
               env:
 {{- if .Values.env }}
