--- a/opensearch-curator/charts/opensearch-curator/templates/hooks/job.install.yaml
+++ b/opensearch-curator/charts/opensearch-curator/templates/hooks/job.install.yaml
@@ -45,12 +45,12 @@ spec:
           imagePullPolicy: {{ $.Values.image.pullPolicy }}
           volumeMounts:
             - name: config-volume
-              mountPath: /etc/es-curator
+              mountPath: /etc/opensearch-curator
     {{- if $.Values.extraVolumeMounts }}
 {{ toYaml $.Values.extraVolumeMounts | indent 12 }}
     {{- end }}
           command: [ "curator" ]
-          args: [ "--config", "/etc/es-curator/config.yml", "/etc/es-curator/action_file.yml" ]
+          args: [ "--config", "/etc/opensearch-curator/config.yml", "/etc/opensearch-curator/action_file.yml" ]
           resources:
 {{ toYaml $.Values.resources | indent 12 }}
     {{- with $.Values.nodeSelector }}
