Updata and adjust opensearch
Signed-off-by: dehaocheng <dehaocheng@kubesphere.io>

--- a/opensearch-curator/charts/opensearch-curator/templates/cronjob.yaml
+++ b/opensearch-curator/charts/opensearch-curator/templates/cronjob.yaml
@@ -11,6 +11,7 @@ metadata:
   annotations:
 {{ toYaml .Values.cronjob.annotations | indent 4 }}
 {{- end }}
+  namespace: {{ template "opensearch-curator.namespace" . }}
 spec:
   schedule: "{{ .Values.cronjob.schedule }}"
   {{- with .Values.cronjob.concurrencyPolicy }}
