--- a/opensearch-curator/charts/opensearch-curator/templates/configmap.yaml
+++ b/opensearch-curator/charts/opensearch-curator/templates/configmap.yaml
@@ -7,6 +7,7 @@ metadata:
     chart: {{ template "opensearch-curator.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+  namespace: {{ template "opensearch-curator.namespace" . }}
 data:
   action_file.yml: {{ required "A valid .Values.configMaps.action_file_yml entry is required!" (toYaml .Values.configMaps.action_file_yml | indent 2) }}
   config.yml: {{ required "A valid .Values.configMaps.config_yml entry is required!" (toYaml .Values.configMaps.config_yml | indent 2) }}
