--- a/opensearch-curator/charts/opensearch-curator/templates/hooks/job.install.yaml
+++ b/opensearch-curator/charts/opensearch-curator/templates/hooks/job.install.yaml
@@ -10,6 +10,7 @@ metadata:
     chart: {{ template "opensearch-curator.chart" $ }}
     release: {{ $.Release.Name }}
     heritage: {{ $.Release.Service }}
+  namespace: {{ template "opensearch-curator.namespace" . }}
   annotations:
     "helm.sh/hook": post-{{ $kind }}
     "helm.sh/hook-weight": "1"
